fixed words merging issue + added the flicker to the first letter before even starting typing

--- a/typingStyle.css
+++ b/typingStyle.css
@@ -9,8 +9,6 @@
 }
 
 .current-letter-highlight {
-  display: inline-block;
-  padding: 1px;
   animation: flicker 0.55s infinite alternate;
 }
 
